# busy-installer

./: .gitignore  AGENTS.md  CURRENT_STATE.md  README.md  busy  busy.cmd  busy.ps1  manifest.json  pf  pf.cmd  pillowfort.cmd  pillowfort.ps1  pyproject.toml
busy_installer/: __init__.py  app.py  cli.py
busy_installer/core/: config.py  runner.py  state.py
busy_installer/platform/: __init__.py  launcher.py  management_bootstrap.py  onboarding_bootstrap.py
busy_installer/platform/linux/: launcher.sh
busy_installer/platform/macos/: launcher.command
busy_installer/platform/windows/: launcher.ps1
docs/: installer-manifest.yaml  provider-catalog.json
docs/internal/: INSTALLER_MULTI_PLATFORM_FEATURE_SPEC.md  INSTALLER_RELEASE_SMOKE_MATRIX.md  OPEN_QUESTIONS_AND_DECISIONS.md
scripts/: bootstrap_env.py  release_smoke.py  smoke_manifest.py
tests/: conftest.py  test_app.py  test_bootstrap_env.py  test_config.py  test_dev_scripts.py  test_launcher.py  test_management_bootstrap.py  test_onboarding_bootstrap.py  test_runner.py  test_ui_actions.py
ui/: actions.py  manifest.json
